# FinFrases

./: .env-example  Dockerfile  HELP.md  README.md  compose.yml  pom.xml  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
api/: .dockerignore  .env-example  Dockerfile  main.py  requirements.txt
api/FinFrases/: opencollection.yml
api/FinFrases/Quotes/: Create Quote.yml  Delete Quote By ID.yml  Get Quote By ID.yml  Get Random Quote.yml  Get Today Quote.yml  Update Quote By ID.yml
api/FinFrases/environments/: local.yml
api/core/: __init__.py  cache.py  config.py  database.py  security.py
api/core/exceptions/: __init__.py
api/core/handlers/: __init__.py  exception_handlers.py
api/exceptions/: __init__.py  custom_exceptions.py  handlers.py
api/fin_frases/: opencollection.yml
api/fin_frases/Quotes/: Create Quote.yml  Get All Quotes.yml
api/fin_frases/environments/: local.yml
api/models/: __init__.py  enums.py  quote.py
api/repositories/: __init__.py  quote_repository.py
api/routers/: __init__.py  quotes.py
api/schemas/: __init__.py  error_schema.py  pagination.py  quote_schema.py
api/services/: __init__.py  quote_service.py
api/tests/: __init__.py  conftest.py  test_quote_service.py
api/utils/: utils.py
src/main/java/br/com/github/williiansilva51/finfrases/: FinFrasesApplication.java
src/main/java/br/com/github/williiansilva51/finfrases/config/: OpenAPIConfiguration.java  SecurityConfiguration.java  StringToEnumConverter.java
src/main/resources/: application.yaml
src/test/java/br/com/github/williiansilva51/finfrases/: FinFrasesApplicationTests.java
(+14 files in other folders)
